fix: updated colors and alignment

--- a/src/app/components/creator/creator-form/creator-form.component.scss
+++ b/src/app/components/creator/creator-form/creator-form.component.scss
@@ -6,10 +6,6 @@
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2)
 }
 
-.blue-text {
-    color: #00BCD4
-}
-
 .form-control-label {
     margin-bottom: 0
 }
@@ -65,3 +61,4 @@ button:focus {
     flex-direction: row;
     display: flex;
 }
+ 
