--- a/src/app/shared/portfoliocards/portfoliocards.component.scss
+++ b/src/app/shared/portfoliocards/portfoliocards.component.scss
@@ -37,7 +37,6 @@
 .about {
     margin-top: 30px;
     line-height: 1.6;
-    color: aquamarine;
 }
 
 .btn {
