--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,6 @@
     box-sizing: border-box;
 }
 
-// body {
-//     background: #222;
-//     height: 100vh;
-//     display: grid;
-//     place-items: center;
-//     font-family: Montserrat;
-//     color: #b3afbf;
-// }
+.blue-text {
+    color: #00BCD4
+}
